--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "analyze": "npx vite-bundle-analyzer"
   },
   "dependencies": {
     "@firebase/auth": "^1.10.8",
@@ -50,8 +51,11 @@
   "devDependencies": {
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "globals": "^16.3.0",
-    "vite": "^7.0.3"
+    "terser": "^5.43.1",
+    "vite": "^5.2.10",
+    "vite-bundle-analyzer": "^1.1.0",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
